Fixed scrolling issue by adding overflow-x hidden to body.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 32px auto;
   width: 90%;
+  overflow-x: hidden;
   background-image: url('../images/paper-texture-dark-low.jpg');
 
 /*  background-image: url('../images/grid-bg-32px.png');
